--- a/app/src/main/res/layout/activity_story.xml
+++ b/app/src/main/res/layout/activity_story.xml
@@ -12,11 +12,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/spacing_16"
-        android:layout_marginTop="@dimen/spacing_40"
+        android:layout_marginTop="@dimen/spacing_30"
         android:layout_marginEnd="@dimen/spacing_16"
         android:text="@string/welcome_back"
         android:textColor="@color/gray_200"
-        app:layout_constraintEnd_toStartOf="@+id/action_logout"
+        app:layout_constraintEnd_toStartOf="@+id/action_maps"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -29,21 +29,35 @@
         android:layout_marginTop="@dimen/spacing_8"
         android:layout_marginEnd="@dimen/spacing_16"
         android:textSize="@dimen/text_size_20"
-        app:layout_constraintEnd_toStartOf="@+id/action_logout"
+        app:layout_constraintEnd_toStartOf="@+id/action_maps"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_welcome_back" />
+    <ImageButton
+        android:id="@+id/action_maps"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/spacing_30"
+        android:layout_marginEnd="5dp"
+        android:background="@drawable/bg_image_button"
+        android:padding="@dimen/spacing_8"
+        android:src="@drawable/ic_map"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/action_change_language"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0"
+        tools:ignore="ContentDescription" />
 
     <ImageButton
         android:id="@+id/action_logout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/spacing_40"
-        android:layout_marginEnd="5dp"
+        android:layout_marginTop="@dimen/spacing_30"
+        android:layout_marginEnd="@dimen/spacing_8"
         android:background="@drawable/bg_image_button"
         android:padding="@dimen/spacing_8"
         android:src="@drawable/ic_exit"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/action_change_language"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0"
         tools:ignore="ContentDescription" />
@@ -52,13 +66,13 @@
         android:id="@+id/action_change_language"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/spacing_40"
-        android:layout_marginEnd="@dimen/spacing_8"
+        android:layout_marginTop="@dimen/spacing_30"
+        android:layout_marginEnd="5dp"
         android:background="@drawable/bg_image_button"
         android:padding="@dimen/spacing_8"
         android:src="@drawable/ic_language"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/action_logout"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0"
         tools:ignore="ContentDescription" />
