--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
     <dimen name="spacing_8">8dp</dimen>
     <dimen name="spacing_16">16dp</dimen>
+    <dimen name="spacing_30">30dp</dimen>
     <dimen name="spacing_40">40dp</dimen>
 
     <dimen name="text_size_12">12sp</dimen>
