--- a/app/src/main/res/layout/activity_story_detail.xml
+++ b/app/src/main/res/layout/activity_story_detail.xml
@@ -22,6 +22,7 @@
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:scaleType="centerCrop"
+            android:contentDescription="@string/content_desc_detail_story_photo"
             android:transitionName="photo" />
     </androidx.cardview.widget.CardView>
 
